{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 15,
  "lineage": "89dafd16-b940-5319-2738-c1e4a25c3b52",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:923984150435:security-group/sg-09368436cacc76e6f",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-09368436cacc76e6f",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0fd1fb47d26fa3c7e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9bfdb247cc8de84",
            "arn": "arn:aws:ec2:ap-northeast-2:923984150435:instance/i-0178754ff4ad5e58f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0178754ff4ad5e58f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "teamo2_den_study",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01ee26de242e94920",
            "private_dns": "ip-172-31-0-116.ap-northeast-2.compute.internal",
            "private_ip": "172.31.0.116",
            "public_dns": "ec2-3-39-248-55.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.248.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c6b72e090b37da2f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh_from_all",
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069e5604a010b7179",
            "tags": {
              "Name": "den msa study"
            },
            "tags_all": {
              "Name": "den msa study"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04be32af1c7e982ef",
              "sg-09368436cacc76e6f"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.ssh",
            "data.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:923984150435:security-group/sg-04be32af1c7e982ef",
            "description": "Allow SSH port from all",
            "egress": [],
            "id": "sg-04be32af1c7e982ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_from_all",
            "name_prefix": "",
            "owner_id": "923984150435",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fd1fb47d26fa3c7e"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}